--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@
   border-radius: 5px;
   gap: 1.5rem;
   width: 70%;
-  max-width: 500px;
+  max-width: 2000px;
   /* background-color: #c9c9c9; */
 }
 
@@ -50,7 +50,7 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 input {
@@ -91,6 +91,12 @@ button {
 
 .deleteall:hover {
   background-color: #dc5d5d;
+}
+
+.error {
+  font-style: italic;
+  font-weight: 500;
+  color: #fa6d6d;
 }
 
 .progress {
@@ -221,4 +227,3 @@ td > input {
     padding: 6px 8px;
   }
 }
-
