--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,7 @@
   gap: 1.5rem;
   width: 80%;
   top: 0;
+  z-index: 2;
   position: sticky;
   background-color: #ffffff;
   border: var(--border-table);
@@ -177,6 +178,9 @@ td {
 .status {
   width: 15%;
   border-right: var(--border-table);
+  input {
+    transform: scale(1.7);
+  }
 }
 
 .delete {
@@ -227,5 +231,8 @@ td > input {
   td button {
     font-size: 0.6rem;
     padding: 6px 8px;
+  }
+  .status input {
+    transform: scale(1.2);
   }
 }
